--- a/atomic/pages.scss
+++ b/atomic/pages.scss
@@ -1,4 +1,27 @@
+@import 'variables/*';
 @import 'atoms/*';
 @import 'molecules/*';
 @import 'organisms/*';
 @import 'layouts/*';
+
+.canvas{
+	width: 100%;
+	height: 100%;
+	padding: 10px;
+	&.grey{
+		background-color: $transparent-grey;
+	}
+	i{
+		font-size: 2em;
+	}
+}
+
+hr{
+	border-top: 1px solid black;
+}
+
+.example{
+	// width: 100%;
+	// height: 100%;
+	// padding: 20px;
+}
